css/style.css
/* ... */
.header-link {
    color: #fff;
    border-radius: 2em;
    padding: 0.25em;
    margin: 0.25em;
    box-shadow: 0 2px 5px 0px #0005;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 5em;
    border-width: 1px;
    border-style: solid;
    border-color: transparent;
    user-select: none;
    cursor: pointer;
    transition: all var(--transiton-duration-short) ease-out;
}
.header-link-focal {
    border: 1px solid #fff;
    color: #fff;
}
.header-link[data-disabled] {
    opacity: 0.75;
    pointer-events: none;
    background-color: rgba(0, 0, 0, 0.199);
    box-shadow: none;
}
.header-link[data-disabled] .icon {
    background-color: #aaa;
}
.header-icon {
    border-radius: 0.25em;
    background-color: var(--primary-color);
    width: 2em;
    height: 2em;
    display: flex;
    justify-content: center;
    transition: background-color var(--transiton-duration-medium) ease-in-out;
}
.card-selected-details {
    overflow-y: hidden;
    margin: 1.25%;
    width: 55%;
    display: flex;
    flex-direction: column;
    opacity: 0.8;
    transition: opacity var(--transiton-duration-short) ease-in-out;
    background: var(--secondary-color);
    pointer-events: all;
    border-radius: 0.5em;
    color: var(--primary-color);
}
.card-selected-details .card-header {
    padding: 0.5em 0;
    flex-direction: row;
    align-items: center;
    justify-content: normal;
    user-select: none;
}
.card-selected-details.visibility-animating {
    pointer-events: none;
}
.card-selected-details[hidden] {
    pointer-events: none;
    opacity: 0;
}
.card-selected-details[hidden]:not(.visibility-animating) {
    display: none;
}
.section-group {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    flex-direction: row;
    align-content: flex-start;
    transition: opacity var(--transiton-duration-short) ease-out;
    opacity: 1;
    overflow-y: auto;
    top: 0;
    position: relative;
    pointer-events: all;
}
.section-group.visibility-animating {
    pointer-events: none;
}
.section-group[hidden] {
    pointer-events: none;
    opacity: 0;
}
.section-group[hidden]:not(.visibility-animating) {
    display: none;
}
.dynamic-card-container {
    font-size: 1em;
    width: 100%;
    display: flex;
    color: #fff;
    flex-wrap: wrap;
    justify-content: center;
}
.glassmorphism {
    box-shadow: 0px 1px 2px 0px rgb(150 150 150 / 25%);
    background-color: #000000;
    border-radius: 0.5em;
}
.card {
    position: relative;
    min-height: 3em;
    max-width: calc(min(12em, 45%));
    padding: 0.25em;
    margin: 0.25em;
    overflow: hidden;
    display: flex;
    pointer-events: all;
    cursor: pointer;
    transition: all var(--transiton-duration-tiny) ease-out;
    user-select: none;
    top: 0;
    color: var(--tertiary-color);
}
.card.disabled {
    opacity: 0.75;
    pointer-events: none;
    background-color: rgba(0, 0, 0, 0.199);
    box-shadow: none;
}
.card-header {
    display: flex;
    flex-direction: column;
    position: relative;
    width: 100%;
    justify-content: space-between;
}
.card-date {
    width: 100%;
    height: 1.5em;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: flex-end;
}
.card-upper-contents {
    display: flex;
    flex-direction: row;
    align-items: center;
}
.card-title {
    font-size: 1.125em;
    width: 8em;
    text-wrap: balance;
    line-height: 1em;
}
.card-contents {
    height: 100%;
    display: flex;
    flex-direction: column;
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-variant: normal;
    border-top: dashed 1px var(--quaternary-color);
    overflow-y: auto;
    padding: 0.5em;
}
.card-contents p,
.card-contents ul,
.card-contents h1,
.card-contents h2,
.card-contents h3 {
    line-height: 1.125em;
    margin: 0.25em 1.25em;
    font-size: 1em;
}

.card-contents h1,
.card-contents h2,
.card-contents h3 {
    color: var(--tertiary-color);
}


.card-contents a {
    color: #49f;
}
.workouts-overlay {
    position: absolute;
    bottom: 0.25em;
    width: 100%;
    height: 3em;
    display: flex;
    justify-content: space-between;
    left: 0;
}
.workouts-overlay[hidden] {
    display: none;
}
.timer {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin: 0.25em;
    width: 50%;
    background-color: var(--secondary-color);
    justify-content: space-between;
}
.timer-time-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    width: auto;
}
.timer-time {
    font-size: 1.5em;
    font-weight: bold;
    color: var(--quaternary-color);
}

/* Icons */
.card-icon {
    margin: 0.25em;
    height: 1.5em;
    width: 1.5em;
    background-color: var(--quaternary-color);
}
.icon {
    mask-repeat: no-repeat;
    mask-size: cover;
}
.icon[data-icon='health'] {
    mask-image: url('../images/svg/health.svg');
    -webkit-mask-image: url('../images/svg/health.svg');
}
.icon[data-icon='family'] {
    mask-image: url('../images/svg/family.svg');
    -webkit-mask-image: url('../images/svg/family.svg');
}
.icon[data-icon='friends'] {
    mask-image: url('../images/svg/friends.svg');
    -webkit-mask-image: url('../images/svg/friends.svg');
}
.icon[data-icon='relationship'] {
    mask-image: url('../images/svg/relationship.svg');
    -webkit-mask-image: url('../images/svg/relationship.svg');
}
.icon[data-icon='hamburger'] {
    mask-image: url('../images/svg/hamburger.svg');
    -webkit-mask-image: url('../images/svg/hamburger.svg');
}
.icon[data-icon='back-arrow'] {
    mask-image: url('../images/svg/back-arrow.svg');
    -webkit-mask-image: url('../images/svg/back-arrow.svg');
}
.icon[data-icon='home'] {
    mask-image: url('../images/svg/home.svg');
    -webkit-mask-image: url('../images/svg/home.svg');
}
/* ... */

